--- a/Task A/index.html
+++ b/Task A/index.html
@@ -66,7 +66,7 @@
         var map;
         var targetDiv = 'map';
          //Amsterdam Coordinates: [52.3667,4.9000]
-         Lexington Coordinates: [38.0489,-84.5025]
+         //Lexington Coordinates: [38.0489,-84.5025]
         var options = {
             center: [38.0489,-84.5025],
             zoom: 13
