--- a/Task B/index.html
+++ b/Task B/index.html
@@ -28,11 +28,11 @@
         }
         h2 {
             display: inline-block;
-            color: #001323;
+            color: #a2aab1;
         }
         #map {
             width: 80%;
-            height: 540px;
+            height: 440px;
             margin: 10px auto;
         }
         footer {
@@ -40,8 +40,11 @@
             width: 80%;
         }
         p {
-            font-size: 1em;
+            font-size: .9em;
             color: #001323;
+        }
+        p.author-info {
+            font-style: italic;
         }
         /* Additional style rules go here! */
     </style>
@@ -49,17 +52,17 @@
 
 <body>
     <header>
-        <h1>Map Title</h1>
+        <h1>Lexington: Home of the Feral Felines</h1>
         <h2>Map Subtitle</h2>
     </header>
 
     <div id='map'></div>
 
     <footer>
-        <p>Map authored by Jeff Levy test2</p>
+        <p class='author-info'>Map authored by Jeff Levy</p>
+        <p>This is an additional footer.</p>
         <p>Additional information about the data and map goes here.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis urna magna, maximus nec laoreet sit amet, dictum ultricies nibh. Ut id auctor lacus. Nam a dolor et justo luctus luctus. Duis a elit eget risus dictum vehicula id eu elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sed enim nisl. Vestibulum commodo imperdiet lacus, sed facilisis erat placerat sit amet. Nulla consequat malesuada neque eget aliquet. Integer non convallis nisl, gravida ultrices ex. Fusce nec vestibulum elit. Sed elementum lectus ipsum, vulputate elementum ex laoreet a. Aenean eu ex varius, varius felis vitae, efficitur nulla. Quisque pretium laoreet ante, in sodales dui vehicula at. Mauris eu sem sapien.
-            <p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis urna magna, maximus nec laoreet sit amet, dictum ultricies nibh. Ut id auctor lacus. Nam a dolor et justo luctus luctus. Duis a elit eget risus dictum vehicula id eu elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sed enim nisl. Vestibulum commodo imperdiet lacus, sed facilisis erat placerat sit amet. Nulla consequat malesuada neque eget aliquet. Integer non convallis nisl, gravida ultrices ex. Fusce nec vestibulum elit. Sed elementum lectus ipsum, vulputate elementum ex laoreet a. Aenean eu ex varius, varius felis vitae, efficitur nulla. Quisque pretium laoreet ante, in sodales dui vehicula at. Mauris eu sem sapien. </p>
     </footer>
 
     <script>
