Finished lab session4

--- a/session-04/lab/index.html
+++ b/session-04/lab/index.html
@@ -64,6 +64,41 @@
     </footer>
 
     <script>
+        console.log("Hello Map");
+        console.log(5);  // output is 5
+        console.log(true);
+        console.log(false);
+        console.log(5 + 8); // output will be 13
+        console.log(5 < 8); // evaluates to true
+        console.log(5 > 8); // evaluates to false
+        console.log(5 == 8); // evaluates to false
+        console.log(5 != 8); // evaluates to true
+        console.log("My name is "+ "Jeff Levy");
+        console.log(5 + "8"); // output is 58
+        console.log(5 + "Hello Map"); // output is a string value "5Hello Map"
+        console.log(5 < "8"); // output is true
+        console.log(5 > "8"); // output is false
+        console.log(5 == "5"); // output is true!?!?!
+        var city;
+        city = "Lexington"
+        console.log(city);
+        var city = "Frankfort";     
+        var state = "Kentucky";
+        console.log(city, ', ',state); 
+        var isCapital = true;  
+        var value1 = 30;
+        var value2 = 60;
+        var total = value1 + value2;
+        console.log(total);
+        var mean = total/2;
+        console.log(mean);
+        var year = 2014;
+        console.log(year);
+        var year = year + 1;
+        console.log(year);
+        var cityPop = 308428;
+        console.log("The population of lexington is ", cityPop);
+        
         var map;
         var targetDiv = 'map';
 
