Map 1 - added extra warning

--- a/map-01/index.html
+++ b/map-01/index.html
@@ -61,7 +61,7 @@
      
         <p>Map authored by Jeff Levy</p>
         <p>The code for this map can be found on <a href="https://github.com/jeffreyelevy/geo409/tree/master/map-01">Github</a>.</p>
-        <p>Giant space iguanas have invaded Melbourne (Australia)! The have established a dozen base camps around the city and are terrorizing its citizens. Don't ask how these cold-blooded bastards survived the frozen void of space; it doesn't matter. Until the temperature starts to dip this July and slow them down, we'll have to wait them out. Use the map above to determine safe passages around town. A special warning to those planning to travel to the other side of the planet to attend the Runaway Country Music Festival: Be sure to use the Melbourne Airport as both the Essendon and RAAF Williams Airports are within striking distance of the typically herbivorous dingo-munchers.
+        <p>Giant space iguanas have invaded Melbourne (Australia)! The have established a dozen base camps around the city and are terrorizing its citizens. Don't ask how these cold-blooded bastards survived the frozen void of space; it doesn't matter. Until the temperature starts to dip this July and slow them down, we'll have to wait them out. Use the map above to determine safe passages around town. It has been recommended to refrain from entering a 2.2km buffer around their camps, which shouldn't be a problem as they smell like a wallaby's arsehole. A special warning to those planning to travel to the other side of the planet to attend the Runaway Country Music Festival: Be sure to use the Melbourne Airport as both the Essendon and RAAF Williams Airports are within striking distance of the typically herbivorous dingo-munchers.
         </p>
     </footer>
 
