--- a/session-13/task I/index.html
+++ b/session-13/task I/index.html
@@ -93,8 +93,8 @@
     <div id='map'></div>
 
     <footer>
-        <p>Map authored by YOUR NAME</p>
-        <p>Additional information about the data and map goes here.</p>
+        <p>Map authored by Jeff Levy</p>
+        <p>The code for this map can be found on <a href="https://github.com/jeffreyelevy/geo409/tree/master/session-13/task%20I">Github</a>.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis urna magna, maximus nec laoreet sit amet, dictum ultricies nibh. Ut id auctor lacus. Nam a dolor et justo luctus luctus. Duis a elit eget risus dictum vehicula id eu elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sed enim nisl. Vestibulum commodo imperdiet lacus, sed facilisis erat placerat sit amet. Nulla consequat malesuada neque eget aliquet. Integer non convallis nisl, gravida ultrices ex. Fusce nec vestibulum elit. Sed elementum lectus ipsum, vulputate elementum ex laoreet a. Aenean eu ex varius, varius felis vitae, efficitur nulla. Quisque pretium laoreet ante, in sodales dui vehicula at. Mauris eu sem sapien.
         </p>
     </footer>
@@ -104,6 +104,9 @@
 
 
     <script>
+        jQuery("h1").html("Kentucky Housing - Percent Rentals");
+        $("h2").html("ACS 2013 Estimates");
+
         var options = {
             center: [37.8, -85.8],
             zoom: 7.4,
@@ -145,7 +148,7 @@
                 });
                 //        console.log(layer.feature.properties.NAME);
                 var coName = layer.feature.properties.NAME;
-                var popNum = layer.feature.properties.RENTER / layer.feature.properties.TOTAL;
+                var popNum = parseFloat((layer.feature.properties.RENTER / layer.feature.properties.TOTAL) * 100).toFixed(2);
                 //        console.log (popNum);
                 layer.bindPopup("<b>" + coName + " County" + "</b>" + "<br>" + "<b>% Renter: </b>" + popNum);
 
